--- a/compliance-service.html
+++ b/compliance-service.html
@@ -37,23 +37,25 @@
     </head>
     <body id="page-top">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
-            <div class="container">
-                <a class="navbar-brand" href="index.html"><img src="assets/img/navbar-logo.png" style="height: 2.5rem" alt="..." /></a>
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-                    Menu
-                    <i class="fas fa-bars ms-1"></i>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarResponsive">
-                    <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html#services">Services</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#faq">FAQ</a></li>
-                        <li class="nav-item"><a class="nav-link" href="index.html#contact">Contact</a></li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+         <header class="p-3 text-bg-dark"> 
+            <div class="container"> 
+                <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start"> 
+                    <a href="/" class="d-flex align-items-center mb-2 mb-lg-0 text-white text-decoration-none"> 
+                        <img src="/assets/img/navbar-logo.png" style="height: 3rem">
+                    </a> 
+                        <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"> 
+                            <!-- <li><a href="#" class="nav-link px-2 text-dark">Home</a></li>  -->
+
+                        </ul> 
+                        <div class="text-end"> 
+                            <a href="/" class="btn btn-outline-light">Home</a>
+                            <a href="/index.html#services" class="btn btn-outline-light">Services</a>
+                            <a href="#faq" class="btn btn-outline-light">FAQ</a>
+                            <a href="/index.html#contact" class="btn btn-outline-light">Contact</a>
+                        </div> 
+                    </div> 
+                </div> 
+            </header>
 
         <!-- Centered Hero - page title-->
         <div class="px-4 py-5 my-5 mb-1 text-center">     
