--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Services</h2>
-                    <h3 class="section-subheading text-muted"><a href="#" class="link">CLIA</a> and <a href="https://cola.org" class="link">COLA</a> compliant consulting for moderate complexity labs. </h3>
+                    <h3 class="section-subheading text-muted"><a href="clia.html" class="link">CLIA</a> and <a href="https://cola.org" class="link" target="_blank">COLA</a> compliant consulting for moderate complexity labs. </h3>
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
