--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
         <meta name="twitter:description" content="Northshore Laboratory Consulting helps moderate complexity labs achieve CLIA and COLA compliance with expert technical consulting and audit preparation.">
         <meta name="twitter:image" content="https://www.northshoreconsult.org/assets/img/og-image.png">
         
-        
+        <!-- Canonical name -->
+        <link rel="canonical" href="https://www.northshoreconsult.org" />
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
