--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <meta name="twitter:image" content="https://www.northshoreconsult.org/assets/img/og-image.png">
         
         <!-- Canonical name -->
-        <link rel="canonical" href="https://www.northshoreconsult.org" />
+        <link rel="canonical" href="https://northshoreconsult.org" />
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
